@@ -159,6 +159,7 @@
     version.
 94. If compiled with both ffmpeg and mpg123, then prefer mpg123 for mp3 files
     if ffmpeg does not have mp3float codec.
+95. Remove duplicates from dynamic rules.
 
 0.9.2
 -----
